updated the date order and updated the admin section of order

--- a/src/app/Pages/order-admin/order-admin.component.html
+++ b/src/app/Pages/order-admin/order-admin.component.html
@@ -1,1 +1,49 @@
-<p>order-admin works!</p>
+<section>
+    <table class="w-full">
+        <thead>
+            <tr>
+                <th>Order Id</th>
+                <th>User</th>
+                <th>Date Created</th>
+                <th>Order Status
+               <th>Total</th>
+                <th>Actions</th>
+                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new plumber" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button></th>
+            </tr>
+        </thead>
+        <tbody #editableForms>
+            <!-- Tells angular to add the class with same name once editMode is true -->
+            <tr *ngFor="let order of orders">
+                <td class="cursor">
+                    <p>{{order._id}}</p>
+                </td>
+                <td class="cursor">
+                    <p>{{order.email}}</p>
+                </td>
+
+                <td class="cursor">
+                    <p>{{order.createdAt | date:"short"}}</p>
+                </td>
+
+                <td class="cursor">
+                    <p>{{order.status}}</p>
+                </td>
+                <td class="cursor">
+                    <p>{{order.total | currency: "USD"}}</p>
+                </td>
+                <td>
+                    <div class="actions flex gap-2">
+                        <button class="btn btn--info btn--sm" (click)="openDialog(order._id)">View</button>
+                       
+                        <button class="btn btn--danger btn--sm" (click)="deleteOrder(order._id)">Delete</button>
+                    </div>
+
+                </td>
+                <input type="hidden" name="_id" [value] = "order._id">
+
+            </tr>
+           
+        </tbody>
+    </table>
+
+</section>
