updated the header file with the router link for about us page

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -11,7 +11,7 @@
   <div class="main-nav">
     <ul class="nav-links">
       <div class="link1" routerLink="/products"><li>HOME</li></div>
-      <div class="link2" (click)="navLink()"><li>ABOUT</li></div>
+      <div class="link2" routerLink="/about-us"><li>ABOUT</li></div>
       <div class="link3" (click)="navLink()"><li>SERVICES</li></div>
       <div class="link4" (click)="navLink()"><li>TESTIMONIALS</li></div>
       <div class="link5" (click)="navLink()"><li>CONTACT</li></div>
